--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1318,18 +1318,47 @@ To sum up our findings from the present chapter: hole-driven development, togeth
 
 \chapter{Conclusion} \label{conclusion}
 
-TODO
+In this thesis, we have described concepts and techniques useful for implementing and verifying functional algorithms. We worked in Coq, but our ideas readily transfer to other dependently typed languages, like Agda, Idris or F*. Some of the techniques (mostly those concerned with specification and implementation of the abstract template) are probably also useful in languages with weaker type systems, like Haskell, OCaml or F\#.
 
-\section{Technical details}
+\section{Too long, didn't read!}
 
-The source code of the most up-to-date version of this thesis can be found at \thesisrepo. The thesis was born out of my project, which can be found at \repo. The project had two goals: first, formalize some data structures from Okasaki's book; second, see how easy (or hard) it is to formally prove correctness of function algorithms. Even though most code (and time spent) concerns the first of these goals, most insight I gained concerns the second one.\footnote{This looks like yet another example of the famous \href{https://en.wikipedia.org/wiki/Pareto_principle}{Pareto principle}.}
+We have presented 15 concepts/techniques in total (numbered 0 through 14), but they neither capture everything that was described in this thesis, nor are they really unique. They also don't show the big picture -- in fact, they are better thought of as subitems of the following five-item master plan which describes how to turn any problem into a formally verified, user-extensible algorithm that solves it.
 
+\begin{itemize}
+    \item Find a good specification of the problem.
+    \subitem \#0: Good means abstract and easy to use.
+    \subitem \#1: Good specification determines a unique object.
+    \subitem \#2: Bad specifications can possibly be improved with defunctionalization.
+    \subitem \#3: Better specifications can be found by changing their ``focus''.
+    \item Find an algorithm that solves the problem.
+    \item Implement a template of the algorithm that abstracts over the exact details.
+    \subitem \#4: While implementing the template, ignore termination at first.
+    \subitem \#6: Types of components of your template should contain enough evidence, but not too much!
+    \subitem \#7: When dealing with many templates at once, make shared components into parameters. In all other cases, prefer bundled classes.
+    \subitem \#8: Use the Inductive Domain Method to define a better, provably terminating algorithm template.
+    \item Prove termination and correctness of the algorithm template.
+    \subitem \#12: Use the technique of Proof by Admission.
+    \subitem \#9: Outline of termination proof: well-founded induction.
+    \subitem \#11: Outline of correctness proof: functional induction.
+    \item Provide a concrete default implementation together with all the proofs.
+    \subitem \#5: Provide a default implementation.
+    \subitem \#10: Make sure that a default implementation can be run without any proofs obligations, and that terminating implementation can be run without having to prove correctness.
+    \subitem \#13: If your default implementation or its proofs are too abstract, provide a more concrete version.
+    \subitem \#14: When looking for default and concrete implementations, use type-driven development.
+\end{itemize}
+
+The most difficult of these is of course finding a solution to the problem, but we didn't touch this topic, as it is well-described elsewhere and taught to most undergraduates worldwide. Finding good specifications is also pretty hard -- our techniques help mostly with evaluating or modifying them.
+
+\section{Contributions}
+
+The source code of the most up-to-date version of this thesis can be found at \thesisrepo. The thesis was born out of my project, which can be found at \repo. The project had two goals: first, formalize some data structures from Okasaki's book; second, see how easy (or hard) it is to formally prove correctness of functional algorithms. Even though most code (and time spent) concerns the first of these goals, most insight I gained concerns the second one.\footnote{This looks like yet another example of the famous \href{https://en.wikipedia.org/wiki/Pareto_principle}{Pareto principle}.}
+
+I have discovered the core the approach described in this thesis while working an a comparison of sorting algorithms 
 
 \section{Related and further work}
 
 TODO
 
-\section{TLDR}
 
 \section{Exercise}
 
